fixcontrast

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -16,8 +16,6 @@
 
 body {
     font-family: var(--paragraph-font);
-    margin: 0;
-    padding: 0;
     background-color: white;
 }
 
@@ -28,10 +26,8 @@ body {
 }
 
 header {
-    padding: 1em;
     text-align: center;
     font-family: var(--heading-font);
-    background-color: var(--primary-color);
 }
 
 #headertitle {
@@ -42,6 +38,8 @@ header {
     gap: 20px;
     justify-content: center;
     align-items: center;
+    background-color: var(--primary-color);
+
 }
 
 
@@ -72,10 +70,10 @@ header {
     flex-direction: column;
     list-style: none;
     font-family: var(--heading-font);
-    font-size: 2rem;
-    font-weight: 700;
+    font-size: 1.7rem;
     margin: 0;
-    padding: 0;
+    padding: 10px;
+    background-color: var(--accent2-color);
 }
 
 .navigation li {
@@ -104,8 +102,8 @@ nav a {
 }
 
 nav a:hover {
-    color: var(--accent3-color);
-    background-color: var(--accent2-color);
+    color: var(--accent2-color);
+    background-color: var(--accent1-color);
     border-radius: 10px;
 }
 
